[gd_scene load_steps=2 format=2]

[ext_resource path="res://Trello_Reporting_Tool.gd" type="Script" id=1]

[node name="Trello_Reporting_Tool" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -212.0
margin_bottom = -40.0
rect_min_size = Vector2( 300, 260 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 14.0
text = "Trello Reporting Tool"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 280.0
margin_bottom = 18.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 280.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 235.0
custom_constants/separation = 0

[node name="ShortDescLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 14.0
text = "Title"

[node name="ShortDescEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 280.0
margin_bottom = 38.0

[node name="Spacer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_top = 38.0
margin_right = 280.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 10 )

[node name="LongDescLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 48.0
margin_right = 280.0
margin_bottom = 62.0
text = "Description"

[node name="LongDescEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_top = 62.0
margin_right = 280.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 105 )
size_flags_vertical = 3

[node name="Spacer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_top = 167.0
margin_right = 280.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 20 )

[node name="Custom" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_top = 187.0
margin_right = 280.0
margin_bottom = 207.0

[node name="feedback" type="Label" parent="VBoxContainer/HBoxContainer/Custom"]
visible = false
margin_right = 285.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "report"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="OptionButton" parent="VBoxContainer/HBoxContainer/Custom"]
margin_right = 138.0
margin_bottom = 20.0
size_flags_horizontal = 3
pressed = true

[node name="Send" type="Button" parent="VBoxContainer/HBoxContainer/Custom"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/ShortDescEdit" to="." method="_on_ShortDescEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LongDescEdit" to="." method="_on_LongDescEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Custom/Send" to="." method="_on_Send_pressed"]
